fix header on mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -252,11 +252,7 @@ h1 {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-}
-
-.hebergements__cards {
     width: 100%;
-    display: flex;
 }
 
 .hebergements__cards img {
@@ -275,7 +271,7 @@ h1 {
 }
 
 .hebergements__cards .card__txt {
-    padding: 5px 0 10px 15px;
+    padding: 10px 0 10px 15px;
 }
 
 .more {
@@ -356,6 +352,7 @@ h1 {
 
 .activities h3 {
     margin: 0;
+    height: auto;
     font-size: 16px;
     padding: 20px 19px;
 }
@@ -366,7 +363,7 @@ h1 {
 }
 
 .activities__cards a {
-    width: calc(25% - 30px);
+    width: 23%;
 }
 
 .activities__cards img {
@@ -468,6 +465,7 @@ footer li {
     }
     header {
         width: 100%;
+        height: 115px;
         flex-direction: column;
         align-items: center;
         align-self: stretch;
@@ -558,6 +556,7 @@ footer li {
     .activities {
         margin-bottom: 0;
     }
+
     .activities h2 {
         margin-top: 0 ;
     }
@@ -579,6 +578,7 @@ footer li {
     }
 
     .activities__cards a {
+        display: block;
         width: 100%;
         margin-bottom: 15px;
     }
@@ -588,7 +588,7 @@ footer li {
     }
 
     .activities__cards img {
-        max-width: 100%;
+        min-width: 100%;
         height: 140px;
         object-fit: cover;
         border-radius: 20px 20px 0 0;
